k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - arjunank.co
        - www.arjunank.co
      secretName: arjunank-co
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
    # - host: arjunank.co
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: client-cluster-ip-service
    #             port:
    #               number: 3000
    #       - path: /api/?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: server-cluster-ip-service
    #             port:
    #               number: 5000
    # - host: www.arjunank.co
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: client-cluster-ip-service
    #             port:
    #               number: 3000
    #       - path: /api/?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: server-cluster-ip-service
    #             port:
    #               number: 5000
